--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       
       <div class="row center">
-      <a href="/aboutme.html" id="welcome-button" class="btn-large waves-effect waves-light blue-grey">About me</a>
+      <a href="/Personal-Portfolio-Template/aboutme.html" id="welcome-button" class="btn-large waves-effect waves-light blue-grey">About me</a>
       </div>
     </div>
 
